--- a/config.yml
+++ b/config.yml
@@ -16,13 +16,13 @@ cliArgs:
 routingServers:
   osrm:
     car:
-      host: 'vroom-express-f9qjs.ondigitalocean.app'
+      host: 'vroom-docker-e56yb.ondigitalocean.app'
       port: '5000'
     bike:
-      host: 'vroom-express-f9qjs.ondigitalocean.app'
+      host: 'vroom-docker-e56yb.ondigitalocean.app'
       port: '5000'
     foot:
-      host: 'vroom-express-f9qjs.ondigitalocean.app'
+      host: 'vroom-docker-e56yb.ondigitalocean.app'
       port: '5000'
   ors:
     driving-car:
